# multisig-ecdsa

./: .gitignore  Cargo.toml  Readme.md
class/: Cargo.toml
class/depend/pari/: Makefile
class/depend/pari/Olinux-x86_64/: Makefile  gp-dyn  mpinl.h  mpker.c  pari.cfg  paricfg.h  parilvl1.h
class/depend/pari/doc/: Makefile  gphelp  paricfg.tex
class/depend/pari/examples/: Makefile.linux-x86_64
class/depend/pari/src/desc/: pari.desc
class/src/primitives/: cl_dl_public_setup.rs
multisig/: Cargo.toml
multisig/src/: error.rs  lib.rs  message.rs  mta.rs  processor.rs  proof.rs  state.rs
multisig/src/zero_knowledge/: cl_zk_aff.rs  cl_zk_enc.rs  mod.rs
