[package]
name = "multisig"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "^0.9"
serde = { version = "^1.0", features = ["derive"] }
serde_with = "^1.9"
bincode = "^1.3"
curv-kzen = "0.7"
class_group = { path = "../class" }

[dev-dependencies]
bincode = "1.3"
cpu-time = "1"